<resources>
    <string name="app_name">Actividad_Evaluativa_3</string>
    <string name="tvVersionAndroidLB">1.Version Android</string>
    <string name="tvVersionAndroid"></string>
    <string name="tvLight">2.FlashLight</string>
    <string name="btnOn">On</string>
    <string name="btnOff">Off</string>
    <string name="tvLevelBaterry">3.Level of Baterry</string>
    <string name="tvLevelBaterry_2"></string>
    <string name="tvStorage">4.Storage</string>
    <string name="etNameFile">Name File</string>
    <string name="btnSaveFile">Save</string>
    <string name="tvConectionLB">5. Conection</string>
    <string name="tvState"></string>
    <string name="btnEnableBluetooth">Enable Bluetooth</string>
    <string name="btnDisableBluetooth">Disable Bluetooth</string>
    <string name="btnPairedDevices">Paired Devices</string>
    <string name="tvBluetoothState">Bluetooth State</string>
    <string name="tvCameraLB">6.Camera</string>
    <string name="btnTakePhoto">Tomar Foto</string>

</resources>