<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/tvVersionAndroidLB"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:text="@string/tvVersionAndroidLB" />

    <TextView
        android:id="@+id/tvVersionAndroid"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:text="@string/tvVersionAndroid" />

    <TextView
        android:id="@+id/tvLight"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:text="@string/tvLight" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="51dp" >

        <Button
            android:id="@+id/btnOff"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/btnOff" />

        <Button
            android:id="@+id/btnOn"
            android:layout_width="207dp"
            android:layout_height="wrap_content"
            android:text="@string/btnOn" />
    </TableRow>

    <TextView
        android:id="@+id/tvLevelBaterryLB"
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:text="@string/tvLevelBaterry" />

    <TextView
        android:id="@+id/tvLevelBaterry"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:text="@string/tvLevelBaterry_2" />

    <ProgressBar
        android:id="@+id/pbLevelBaterry"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvStorageLB"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/tvStorage" />

    <EditText
        android:id="@+id/etNameFile"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/etNameFile" />

    <ImageButton
        android:id="@+id/btnSaveFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/btnSaveFile"
        app:srcCompat="@android:drawable/ic_input_add" />

    <TextView
        android:id="@+id/tvConectionLB"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:text="@string/tvConectionLB" />

    <TextView
        android:id="@+id/tvState"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:text="@string/tvState" />

    <Button
        android:id="@+id/btnBluetooth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Bluetooth" />

    <Button
        android:id="@+id/btnCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Cámara" />


</LinearLayout>